<resources>
    <string name="app_name">Events App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="backtologin">Back to </string>
    <string name="backtologin0"><u>Login</u></string>
    <string name="getcode"><u>Get code</u></string>
    <string name="forgot_password">FOGOT PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="hint_your_email">Enter your email</string>
    <string name="hint_your_fullName">Enter your name</string>
    <string name="hint_address"><u>Enter your address</u></string>
    <string name="hint_your_password">Enter your password</string>
    <string name="hint_your_phone">Enter your phone</string>
    <string name="hint_your_confirm_password">Enter your confirm password</string>
    <string name="hint_your_edit_profile">Edit profile</string>
    <string name="hint_your_touch_to_change">Touch to change</string>
    <string name="hint_your_code">Enter your code</string>
    <string name="change_password">Change password</string>
    <string name="event_date"><u>Event date</u></string>
    <string name="event_chairman"><u>Event chairman</u></string>
    <string name="event_address"><u>Event address</u></string>
    <string name="text_button_register">Registration</string>
    <string name="event_detail"><u>Event detail</u></string>
    <string name="register_new_account"><u>Sign up</u></string>
    <string name="register_new_account0"><u>Dont have an account? </u></string>
    <string name="already_account_back_to_login0"><u>Already account </u></string>
    <string name="already_account_back_to_login1"><u>Back to login</u></string>
    <string name="yes">OK</string>
    <string name="no">Cancel</string>
    <string name="event_cancel">Event cancel</string>
    <string name="hint_search">Search something ...</string>
    <string name="hint_activity_change">Change</string>
    <string name="event_favorite"><u>Would you like to like this event?</u></string>
    <string name="namedit">Name</string>
    <string name="emailedit">Email</string>
    <string name="phoneedit">Phone</string>
    <string name="addressedit">Address</string>
    <string name="change_password_dialog">Change password</string>
    <string name="hint_enter_old_pass">Enter the current password</string>
    <string name="hint_enter_new_pass">Enter new password</string>
    <string name="hint_enter_new_pass_again">Enter new password again</string>
    <string name="hint_question_dialog">Did you like this event?</string>
    <string name="hint_my_profile">MY PROFILE</string>
    <string name="logout">Logout</string>
    <string name="registered_event">Registered event</string>
    <string name="going_on">Going On</string>
    <string name="going_on_happened">Going on happen</string>
    <string name="happened">Happened</string>
    <string name="notificationevent">You have no ongoing events</string>
    <string name="notificationeventsdc">SDC notification</string>
    <string name="totalevent">Total</string>
    <string name="clearevent">Clear</string>
    <string name="notificationscanner">" Please scan to get through the Port"</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="my_profile_admin">MY PROFILE</string>
    <string name="save">Save</string>
    <string name="forgotyourpassword">Forget your password</string>
    <string name="setupnow">Set up now</string>
    <string name="click_to_get_qrcode">Click to get QR code</string>
    <string name="search_something">Enter event name to find the event name</string>
    <string name="search_something_hint">Enter event name to search</string>
    <string name="event">Events</string>
    <string name="confirmation_password_again_does_not_match_the_password">Confirmation password again does not match the password</string>
    <string name="profile_setting">Profile setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="load">Loading...</string>
</resources>
